# dino-ds

./: AGENTS.md  DinoDS_full_validator_config_2026-02-19.md  Full_Dataset_Spec_FULL_LATEST_v17.md  LANE06_EXCEPTION.md  LICENSE  Lane03_JA_KO_HI_VI_ES_PT-BR_IT_DE_FR_QC_Checklist_v17r3.md  Synthetic_Dataset_Lock_Spec_01_13_2026.md  WRAPPED_PACKAGE.md  dino-ds-bin.spec  lane01_identity_proof_CAR.json  lane01_identity_proof_TEF.jsonl  lane_03_turn_report_1976cfd1-991e-471f-b41c-df78d5fd6445.txt  lane_03_turn_report_61bbcde85fe54d82bbf9b8445c0e15f0.txt  lane_03_turn_report_ae947b06-5f2d-4c25-9013-5529361bed8a.txt  lane_05_strictdup_patch_report_turn.txt  lane_05_turn_report_2ec5f68e92c04068b12f5c1caaaba39d.txt  lane_05_turn_report_35e606c7f8b2405e83c4a5cf4ff475ec.txt  lane_05_turn_report_65a890325d4a4f8597c6fbb15de34b7e.txt  lane_05_turn_report_698EB8B0-C537-4C94-9B19-01A61BBCEE2F.txt  lane_05_turn_report_6af5de8869584a818300239dbb7d6a39.txt  lane_05_turn_report_FCED35F7-B702-4FEE-B14F-573FC58AB496.txt  lane_05_turn_report_ca6cb58f4e534b74b61a1a03638e2910.txt  lane_build_blueprint_v1_2026-02-17.md  pyproject.toml  system_prompt_registry.json
Codex_Instruction/: AGENTS_CODEX_GLOBAL_INSTRUCTIONS_v16.md  AGENTS_v17_patched3_quality_strictdup.md  DTAD_CTv3_QC_EQUATOR_FEB_18_2026_v4_1_DUP_ROBUST_GUARDRAILS.md  DTAD_Lane_QC_Standatd_v17r3.md  Lane_Contract_Matrix_v17_multilingual_strategy_v3.md  PCT-perf_Training_config_Spec_36_lanes__02_01_2026.md  dino_ds_seed_slotbank_library_v1._hand_made.json
QC Spec/: AGENTS_CODEX_GLOBAL_INSTRUCTIONS_v16.md  DinoDS_Lane_QC_Standard_v17r3.md  (+8 more)
(+20467 files in other folders)
